ajouter le titre du fichier index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dossier n61-remote-git</title>
 </head>
 <body>
-    
+    <h1>travail sur le dossier n61-remote-git</h1>
+    <p>il faut faire un push</p>
 </body>
 </html>
